fixed layout issue causing provider button to not be clickable sometimes

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -196,6 +196,7 @@ h2 {
 	max-height: 0px;
 	opacity: 0;
 	transition: max-height 600ms 0ms, opacity 400ms 0ms;
+	z-index: -1;
 }
 
 /* LOGIN & REG SPECIFIC */
